# CoreWar

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CoreWar.cbp  HOW2RUN_cbuild  Makefile  TODO  asm  author  cmake_install.cmake  corewar  find_wrng_op_cycle.py  hex_printer
bot/: tt.s
data/: corewar_lex.h  op.c  run_champs.sh
data/champs/: barriere.s  champ.s  zork.s
data/test_data/: error_test.sh  name_test.sh  run_test.sh  tmp_test.cor  tmp_test.s  tmp_test_00.s  tmp_test_01.s
include/: op.h
include/asm/: assembler.h  champ_generator.h  debug_funcs.h  disassembler.h  lexer.h  read_args.h  semantic_graph.h  token_types.h  writer.h
include/vm/: checkop.h  corewar.h  error_msgs.h  merge.h  visu.h  visu_h
libft/: Makefile  README.md  author
libft/ft_ocl/: ocl_build_program.c  ocl_create_device.c  ocl_dev_cont_prog.c  ocl_err_handler.c
libft/includes/: btavl.h  ft_list.h  ft_printf.h  ft_sort.h  get_next_line.h  htable.h  libft.h  libstd.h  mtrx.h  ocl.h  t_list.h  t_vec.h
libft/std_lib/: Rules
src/: get_op_data.c
src/asm/: L00_lexer.c  L01_lexer_init.c  L02_lexer_preinit.c  L10_lexer_helper.c  L11_lexer_debug_token.c  L13_lexer_debug_type.c  L20_lexer_cmd.c  L20_lexer_cmd_name.c  L21_lexer_cmd_name_short.c  L21_lexer_cmd_short.c  L22_lexer_cmd_long.c  L22_lexer_cmd_name_long.c  L30_lexer_label.c  L30_lexer_token.c  L40_lexer_inst.c  L40_lexer_label.c  L50_lexer_inst.c  L50_lexer_parm.c  L60_lexer_parm.c  L70_lexer_clear.c  L80_lexer_check_line_job.c  Makefile  assembler.c  champ_generator.c  cmdgen_funcs.c  create_ofname.c  debug_funcs.c  disassembler.c  generate_code.c  generate_commands.c  generate_commands2.c  generate_commands_dis.c  get_op_data.c  lexer.c  main.c  main_test_lexer.c  n00_lexer.c  n01_lexer_init.c  n02_lexer_preinit.c  n10_lexer_helper.c  (+23 more)
src/sort/: _merge  _merge_main  _merge_org  merge.c  merge_control.c  merge_free.c  merge_merge.c  merge_nature_merge.c  merge_show.c  merge_weave.c
src/visu/: show_controller.c  show_game.c  show_general.c  show_init.c  show_phase_10_init.c  show_phase_11_let_start.c  show_phase_12_mem_trig.c  show_phase_13_time_to_die.c  show_phase_15_reshow.c  (+10 more)
test_data/: name_test.sh  tmp_test.s
test_one/: run_diff.sh  run_init.sh  run_speed.sh
test_vm/: HOW2RUN_cbuild  champ_vs_champ  dump_main.txt  dump_test.txt  out  out.full  run_0_separate.sh  run_1_tests.sh  run_diff.sh  run_init.sh  run_speed.sh  run_v2_time.sh  tmp.txt  wave.not.txt  wave.txt
test_vm_foreign/: done.txt  script_check.sh  valid.txt
(+275 files in other folders)
